# catasta

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  test.py  tmp.py
catasta/: __init__.py
catasta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: 01-hyperparameter_optimization.py  02-regression_with_gp.py  03-regression_with_fnn.py  04-regression_with_transformer.py  05-regression_with_fft_transformer 2.py  06-regression_with_mamba.py  07-regression_with_fft_mamba 2.py  08-regression_with_gpformer.py  09-regression_with_patch_gp 2.py  1-hyperparameter_optimization.py  11-image_classification_with_fnn.py  12-image_classification_with_cnn 2.py  13-image_classification_with_transformer.py  14-image_classification_with_fft_transformer.py  15-image_classification_with_mamba.py  16-image_classification_with_fft_mamba 2.py  17-save_and_inference.py  18-fastapi_server.py  2-regression_with_gps.py  approximate_gp_regression.py
tests/: test_agp_regressor.py  test_all_rm.py  test_cnn_classifier.py  test_cnn_image_classifier.py  test_data.py  test_decimation.py  test_deepar_predictor.py  test_feedforward_image_classifier.py  test_feedforward_regressor.py  test_fft_mamba_regressor.py  test_fft_transformer_regressor.py  test_figures.py  test_frols.py  test_gpformer_regressor.py  test_image_classification_dataset.py  test_kalman_filter.py  test_load_class_model.py  test_load_model.py  test_mamba_classifier.py  test_mamba_fft_classifier.py  test_mamba_fft_regressor.py  test_mamba_image_classifier.py  test_mamba_regressor.py  test_narx.py  test_rbf_regressor.py  test_regression_dataset.py  test_save_class_model.py  test_save_model.py  test_tmp_agp_regressor.py  test_transformer_classifier.py  test_transformer_fft_classifier.py  test_transformer_fft_regressor.py  test_transformer_image_classifier.py  test_transformer_regressor.py  test_transformer_signal_classifier.py  test_window_sliding.py  (+1 more)
(+710 files in other folders)
