[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catasta"
version = "0.1.0"
authors = [
  { name="Vistor" },
]
description = "Catasta is a Python library designed to simplify and accelerate the process of machine learning model experimentation. It encapsulates the complexities of model training and evaluation, offering researchers and developers a straightforward pipeline for rapid model assessment with minimal setup required."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "gpytorch",
    "einops",
    "vclog",
    "scipy",
    "pillow",
]

[tool.hatch.build.targets.wheel]
packages = ["catasta"]

[project.urls]
Homepage = "https://github.com/vistormu/catasta"
Issues = "https://github.com/vistormu/catasta/issues"

